// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Rect > ctrls 1`] = `
{
  "b": Rect {
    "master": Rect {
      "master": null,
      "on": [Function],
    },
    "on": [Function],
  },
  "l": Rect {
    "master": Rect {
      "master": null,
      "on": [Function],
    },
    "on": [Function],
  },
  "lb": Rect {
    "master": Rect {
      "master": null,
      "on": [Function],
    },
    "on": [Function],
  },
  "lt": Rect {
    "master": Rect {
      "master": null,
      "on": [Function],
    },
    "on": [Function],
  },
  "r": Rect {
    "master": Rect {
      "master": null,
      "on": [Function],
    },
    "on": [Function],
  },
  "rb": Rect {
    "master": Rect {
      "master": null,
      "on": [Function],
    },
    "on": [Function],
  },
  "rotate": Rect {
    "master": Rect {
      "master": null,
      "on": [Function],
    },
    "on": [Function],
  },
  "rt": Rect {
    "master": Rect {
      "master": null,
      "on": [Function],
    },
    "on": [Function],
  },
  "t": Rect {
    "master": Rect {
      "master": null,
      "on": [Function],
    },
    "on": [Function],
  },
}
`;

exports[`ctrls 1`] = `
{
  "b": Rect {
    "fixedAspectRatio": false,
    "master": Rect {
      "fixedAspectRatio": false,
      "master": null,
      "on": [Function],
    },
    "on": [Function],
  },
  "l": Rect {
    "fixedAspectRatio": false,
    "master": Rect {
      "fixedAspectRatio": false,
      "master": null,
      "on": [Function],
    },
    "on": [Function],
  },
  "lb": Rect {
    "fixedAspectRatio": false,
    "master": Rect {
      "fixedAspectRatio": false,
      "master": null,
      "on": [Function],
    },
    "on": [Function],
  },
  "lt": Rect {
    "fixedAspectRatio": false,
    "master": Rect {
      "fixedAspectRatio": false,
      "master": null,
      "on": [Function],
    },
    "on": [Function],
  },
  "r": Rect {
    "fixedAspectRatio": false,
    "master": Rect {
      "fixedAspectRatio": false,
      "master": null,
      "on": [Function],
    },
    "on": [Function],
  },
  "rb": Rect {
    "fixedAspectRatio": false,
    "master": Rect {
      "fixedAspectRatio": false,
      "master": null,
      "on": [Function],
    },
    "on": [Function],
  },
  "rotate": Rect {
    "fixedAspectRatio": false,
    "master": Rect {
      "fixedAspectRatio": false,
      "master": null,
      "on": [Function],
    },
    "on": [Function],
  },
  "rt": Rect {
    "fixedAspectRatio": false,
    "master": Rect {
      "fixedAspectRatio": false,
      "master": null,
      "on": [Function],
    },
    "on": [Function],
  },
  "t": Rect {
    "fixedAspectRatio": false,
    "master": Rect {
      "fixedAspectRatio": false,
      "master": null,
      "on": [Function],
    },
    "on": [Function],
  },
}
`;
